--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Picspin.github.io</h1>
+          <h1>Zhu.X</h1>
           <h2>Picture Spin Sit Alone the Wall</h2>
         </header>
 
